--- a/README.mkd
+++ b/README.mkd
@@ -109,3 +109,5 @@ Andrew Rodionoff (@andviro)
 - OGURA_Daiki (@hachibeeDI)
 - Pål (@maedox)
 - Charles (@char101)
+- Ronaldo Maia (@romaia)
+- @sgur
